chore: fix import

--- a/src/content/docs/components/actions/button.mdx
+++ b/src/content/docs/components/actions/button.mdx
@@ -3,8 +3,8 @@ title: 'Button'
 description: 'yolo'
 ---
 
-import Button from '@/components/button.astro';
-import ButtonString from '@/components/button.astro?raw';
+import Button from '@/components/Button.astro';
+import ButtonString from '@/components/Button.astro?raw';
 import { Code } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
